--- a/njayan90.github.io/style.css
+++ b/njayan90.github.io/style.css
@@ -49,6 +49,7 @@ z-index:1;
 width:100%;
 height:100%;
 overflow:auto;
+margin-top:100px;
 }
 
 .modal_content {
@@ -132,6 +133,7 @@ margin-top:-5px;
 .center {
 float:left;
 width:80%;
+margin-top:24px;
 }
 
 .side {
