--- a/angular/src/app/body/body.component.html
+++ b/angular/src/app/body/body.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="!add && !detailedTile && newsObject">
+<div *ngIf="!add && !detailedTile && newsObject && !filterWord">
     <div *ngFor="let news of newsObject.articles" style="display:flex; margin-top:20px; margin-bottom:40px;">
         <div>
             <img src="{{news.urlToImage}}" style="width:150px; height:150px;">
@@ -46,3 +46,20 @@
         <button (click)="returnMainPage(false)">Back</button>
     </div>
 </div>
+
+<div *ngIf="filterWord">
+    <div *ngFor="let news of newsObject.articles">
+        <div *ngIf="news.description.includes(filterWord)" style="display: flex; margin-top:20px; margin-bottom:40px;">
+            <div>
+                <img src="{{news.urlToImage}}" style="width:150px; height:150px;">
+            </div>
+            <div style="margin-left:25px; margin-top:-21px;">
+                <h4>{{news.title}}</h4>
+                <p>{{news.publishedAt | date}}</p>
+                <p>{{news.description}}</p>
+                <button (click)="fullDetails(news)">Continue Reading</button>
+            </div>
+        </div>
+    </div>
+</div>
+
