--- a/angular/src/app/header/header-bottom/header-bottom.component.html
+++ b/angular/src/app/header/header-bottom/header-bottom.component.html
@@ -5,9 +5,9 @@
 				<option *ngFor="let channelName of channel">{{channelName}}</option>
 			</select>
 		</div>
-		<div class="filter">
-			<input type='input' value="Type your text here....">
-			<input type='submit' value='Filter'>
+		<div class="filter" >
+			<input #filterWord type='input' value="Type your text here....">
+			<button (click)="filter(filterWord.value)">Filter</button>
 		</div>
 		<div class="article" (click)='addArticle()'>
 			<button>Add article</button>
