--- a/task-7/src/app/app.component.html
+++ b/task-7/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-header></app-header>
-<app-body ></app-body>
+<app-login></app-login>
+<router-outlet></router-outlet>
 <app-footer></app-footer>
