--- a/task-7/src/app/body/body.component.html
+++ b/task-7/src/app/body/body.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="!this.currentPage.getAdd() && !this.currentPage.getDetails() && !this.newsService.getFilterWord()">
     <div *ngFor="let newsSource of newsObject">
         <div *ngIf="newsSource">
-            <div *ngIf="newsSource.source===this.newsService.getChannelName()">
+            <div *ngIf="newsSource.source===this.newsService.getChannelName() && this.newsService.getChannelName()!='all-sources'">
                 <div *ngFor='let news of newsSource.articles'
                     style="display:flex; margin-top:20px; margin-bottom:40px;">
                     <div>
@@ -9,7 +9,7 @@
                     </div>
                     <div style="margin-left:25px; margin-top:-21px;">
                         <h4>{{news.title}}</h4>
-                        <p>{{news.publishedAt | date}}</p>
+                        <p>{{news.publishedAt | date:'medium'}}</p>
                         <p>{{news.description}}</p>
                         <button (click)="fullDetails(news)">Continue Reading</button>
                     </div>
@@ -19,16 +19,36 @@
     </div>
 </div>
 
+<div
+    *ngIf="!this.currentPage.getAdd() && !this.currentPage.getDetails() && !this.newsService.getFilterWord() && this.newsService.getChannelName()==='all-sources'">
+    <div *ngFor="let newsSource of newsObject">
+        <div *ngIf="newsSource">
+            <div *ngFor='let news of newsSource.articles' style="display:flex; margin-top:20px; margin-bottom:40px;">
+                <div>
+                    <img src="{{news.urlToImage}}" style="width:150px; height:150px;">
+                </div>
+                <div style="margin-left:25px; margin-top:-21px;">
+                    <h4>{{news.title}}</h4>
+                    <p>{{news.publishedAt | date:'medium'}}</p>
+                    <p>{{news.description}}</p>
+                    <button (click)="fullDetails(news)">Continue Reading</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 <div *ngIf='addedArticles && !this.currentPage.getAdd() && !this.currentPage.getDetails()'>
     <div *ngFor="let news of addedArticles">
-        <div *ngIf='news.source===this.newsService.getChannelName()' style="display:flex; margin-top:20px; margin-bottom:40px;">
+        <div *ngIf='news.source===this.newsService.getChannelName()'
+            style="display:flex; margin-top:20px; margin-bottom:40px;">
             <div>
                 <img src="{{news.urlToImage}}" style="width:150px; height:150px;">
             </div>
             <div style="margin-left:25px; margin-top:-21px;">
                 <h4>{{news.title}}</h4>
-                <p>{{news.publishedAt}}</p>
+                <p>{{news.publishedAt | date:'medium'}}</p>
                 <p>{{news.description}}</p>
                 <button (click)="fullDetails(news)">Continue Reading</button>
             </div>
@@ -48,7 +68,7 @@
     </div>
     <div style="margin-left:25px; margin-top:-21px;">
         <h4>{{detailedNews.title}}</h4>
-        <p>{{detailedNews.publishedAt | date}}</p>
+        <p>{{detailedNews.publishedAt | date:'medium'}}</p>
         <p>{{detailedNews.description}}</p>
         <button (click)="returnMainPage()">Back</button>
     </div>
@@ -66,7 +86,7 @@
                         </div>
                         <div style="margin-left:25px; margin-top:-21px;">
                             <h4>{{news.title}}</h4>
-                            <p>{{news.publishedAt | date}}</p>
+                            <p>{{news.publishedAt | date:"medium"}}</p>
                             <p>{{news.description}}</p>
                             <button (click)="fullDetails(news)">Continue Reading</button>
                         </div>
