--- a/task-7/src/app/header/header-top/header-top.component.css
+++ b/task-7/src/app/header/header-top/header-top.component.css
@@ -4,7 +4,7 @@
     height:40px;
     }
     
-    .login{
+    .logout{
         margin-left:1240px;
         height:25px;
         margin-top:10px;
