login authentication added

--- a/task-7/src/app/header/header-bottom/header-bottom.component.html
+++ b/task-7/src/app/header/header-bottom/header-bottom.component.html
@@ -6,7 +6,7 @@
 			</select>
 		</div>
 		<div class="filter" >
-			<input #filterWord type='input' value="Type your text here....">
+			<input #filterWord type='input'>
 			<button (click)="filter(filterWord.value)">Filter</button>
 		</div>
 		<div class="article" (click)='setAdd()'>
