--- a/task-7/src/app/header/header-top/header-top.component.html
+++ b/task-7/src/app/header/header-top/header-top.component.html
@@ -1,3 +1,3 @@
 <div class="header-top">
-	<button class="logout" (click)="logout()" [routerLink]="'/login'">Logout</button>
+	<button class="logout" (click)="logout()" [routerLink]="'/'">Logout</button>
 </div>
