--- a/task-7/src/app/login/login.component.html
+++ b/task-7/src/app/login/login.component.html
@@ -1,12 +1,14 @@
 <div *ngIf="this.currentPage.getLogin()">
-<div style="text-align: center; margin-top:200px;">
+<form #f="ngForm">
+    <div style="text-align: center; margin-top:200px;">
     <label>Username</label><br>
-    <input #username type='text'><br>
+    <input type='text' id="username" class="form-control" name="username" ngModel><br>
     <label>Password</label><br>
-    <input #password type='password'><br><br>
-    <button type="button" (click)='checkLogin(username.value,password.value)' [routerLink]="'/news'">Sign In</button>
+    <input type='password' id="password" class="form-control" name="password" ngModel><br><br>
+    <button type="submit" (click)="onSubmit(f)" [routerLink]="'/news'">Sign In</button>
     <div *ngIf="message">
         <p>{{message}}</p>
     </div>
 </div>
+</form>
 </div>
