--- a/task-7/src/app/header/header-top/header-top.component.html
+++ b/task-7/src/app/header/header-top/header-top.component.html
@@ -1,6 +1,6 @@
 <div class="header-top" >
 	<div *ngIf="this.auth.loggedIn" style="display: flex">
-	<p>Welcome {{this.auth.user}}</p>
+	<p>Welcome {{auth.user}}</p>
     <button class="logout" (click)="logout()" [routerLink]="'/'">Logout</button>
 </div>
 </div>
