--- a/task-7/src/app/details/details.component.html
+++ b/task-7/src/app/details/details.component.html
@@ -8,4 +8,7 @@
         <p>{{detailedNews.description}}</p>
         <ng-content></ng-content>
     </div>
+    
 </div>
+
+<app-comment></app-comment>
