--- a/task-7/src/app/comment/comment.component.html
+++ b/task-7/src/app/comment/comment.component.html
@@ -5,12 +5,12 @@
         <button type="submit" (click)="addComment(comment.value)" style="margin-left:150px">Publish</button>
     </div>
     
-    <div style="width:50%; border:1px solid black;">
+    <div style="width:50%; border:1px solid black; height:15em; overflow: hidden;">
         <div style="margin-left:20px; margin-right:20px;">
         <h4>Published Comments:-</h4>
         <hr>
         </div>
-        <div *ngIf="detailedNews.commentCount!=0">
+        <div *ngIf="detailedNews.commentCount!=0" style="height:80%; overflow: scroll;">
             <div *ngFor="let comment of detailedNews.comments" style="margin-left:20px; margin-right:20px;">
                 <h4>{{comment.user}}</h4>
                 <p>{{comment.comment}}</p>
@@ -18,5 +18,4 @@
             </div>
         </div>
     </div>
-
 </div>
