--- a/task-7/src/app/comment/comment.component.html
+++ b/task-7/src/app/comment/comment.component.html
@@ -1,7 +1,7 @@
 <div style="display:flex">
     <div style="width:50%">
         <h4 style="margin-left:150px;">Comment</h4>
-        <input #comment type='input' style="height:100px; width:400px;"><br><br>
+        <input #comment type='input' style="height:100px; width:400px;" id='comment'><br><br>
         <button type="submit" (click)="addComment(comment.value)" style="margin-left:150px">Publish</button>
     </div>
     
