--- a/task-7/src/app/header/header-bottom/header-bottom.component.html
+++ b/task-7/src/app/header/header-bottom/header-bottom.component.html
@@ -1,16 +1,18 @@
-<div class="header-bottom">
-	<span>
-		<div class="news-list">
-			<select (change)="getChannelName($event.target.value)">
-				<option *ngFor="let channelName of channel">{{channelName}}</option>
-			</select>
-		</div>
-		<div class="filter" >
-			<input #filterWord type='input'>
-			<button (click)="filter(filterWord.value)">Filter</button>
-		</div>
-		<div *ngIf='this.authService.user==="admin"' class="article" (click)='setAdd()'>
-			<button>Add article</button>
-		</div>
-	</span>
+<div *ngIf="authService.isAuthenticated()">
+	<div class="header-bottom">
+		<span>
+			<div class="news-list">
+				<select (change)="getChannelName($event.target.value)">
+					<option *ngFor="let channelName of channel">{{channelName}}</option>
+				</select>
+			</div>
+			<div class="filter">
+				<input #filterWord type='text' id='filter'>
+				<button (click)="filter(filterWord.value)">Filter</button>
+			</div>
+			<div *ngIf='this.authService.user==="admin"' class="article" (click)='setAdd()'>
+				<button>Add article</button>
+			</div>
+		</span>
+	</div>
 </div>
