--- a/task-7/src/app/body/body.component.html
+++ b/task-7/src/app/body/body.component.html
@@ -1,4 +1,19 @@
-<app-news></app-news>
+<div *ngIf="!add && !details">
+    <div *ngIf="newsService.getChannelName()!='all-sources' ; else allSources">
+        <div *ngFor='let news of this.newsService.getSourceNews().articles'>
+            <app-news [news]='news'></app-news>
+        </div>
+    </div>
+    <ng-template #allSources>
+        <div *ngFor="let newsSource of newsService.getSourceNews()">
+            <div *ngIf="newsSource">
+                <div *ngFor='let news of newsSource.articles'>
+                    <app-news [news]='news'></app-news>
+                </div>
+            </div>
+        </div>
+    </ng-template>
+</div>
 
 <div *ngIf="add && !details">
     <app-add-article></app-add-article>
@@ -7,4 +22,3 @@
 <div *ngIf="details">
     <app-details><button (click)="returnMainPage()">Back</button></app-details>
 </div>
-
