--- a/task-7/src/app/header/header-bottom/header-bottom.component.html
+++ b/task-7/src/app/header/header-bottom/header-bottom.component.html
@@ -9,9 +9,10 @@
 			<div class="filter">
 				<input #filterWord type='text' id='filter'>
 				<button (click)="filter(filterWord.value)">Filter</button>
+				<button (click)="clearFilter()">Clear</button>
 			</div>
 			<div *ngIf='this.authService.user==="admin"' class="article" (click)='setAdd()'>
-				<button>Add article</button>
+				<button [routerLink]="'/add-article'">Add article</button>
 			</div>
 		</span>
 	</div>
