--- a/task-7/src/app/header/header-bottom/header-bottom.component.html
+++ b/task-7/src/app/header/header-bottom/header-bottom.component.html
@@ -1,3 +1,4 @@
+{{filterWord}}
 <div *ngIf="authService.isAuthenticated()">
 	<div class="header-bottom">
 		<span>
@@ -6,10 +7,14 @@
 					<option *ngFor="let channelName of channel">{{channelName}}</option>
 				</select>
 			</div>
-			<div class="filter">
-				<input #filterWord type='text' id='filter'>
-				<button (click)="filter(filterWord.value)">Filter</button>
-				<button (click)="clearFilter()">Clear</button>
+			<div class="filter" style="display: flex;">
+				<div *ngIf="!filterword ; else clear">
+						<input #filterWord type='text' id='filter'>
+					<button (click)="filter(filterWord.value)">Filter</button>
+				</div>
+				<ng-template #clear>
+					<button (click)="clearFilter()" style="margin-left:100px;">Clear</button>
+				</ng-template>
 			</div>
 			<div *ngIf='this.authService.user==="admin"' class="article" (click)='setAdd()'>
 				<button [routerLink]="'/add-article'">Add article</button>
