--- a/task-7/src/app/body/body.component.html
+++ b/task-7/src/app/body/body.component.html
@@ -1,14 +1,14 @@
 <div *ngIf="!add && !details">
     <div *ngIf="newsService.getChannelName()!='all-sources' ; else allSources">
         <div *ngFor='let news of this.newsService.getSourceNews().articles'>
-            <app-news [news]='news'></app-news>
+            <app-news [news]='news' [filterWord]='filterWord'></app-news>
         </div>
     </div>
     <ng-template #allSources>
         <div *ngFor="let newsSource of newsService.getSourceNews()">
             <div *ngIf="newsSource">
                 <div *ngFor='let news of newsSource.articles'>
-                    <app-news [news]='news'></app-news>
+                    <app-news [news]='news' [filterWord]='filterWord'></app-news>
                 </div>
             </div>
         </div>
